--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "arenabot",
   "version": "0.0.0",
   "private": true,
-  "author": "Stephen Ferrari <sferrari@wayfair.com>",
+  "author": "Stephen Ferrari <stephen.ferrari14@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "hubot": "^3.3.0",
