--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "arenabot",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
   "author": "Stephen Ferrari <stephen.ferrari14@gmail.com>",
-  "description": "A simple helpful robot for your Company",
+  "description": "Bot to enable arena combat with friends",
+  "scripts": {
+    "start": "./node_modules/pm2/bin/pm2 startOrRestart ecosystem.config.js",
+    "stop": "./node_modules/pm2/bin/pm2 stop Arenabot",
+    "monitor": "./node_modules/pm2/bin/pm2 monit",
+    "log": "./node_modules/pm2/bin/pm2 log",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "hubot": "^3.3.0",
     "hubot-conversation": "^1.1.1",
@@ -11,9 +17,6 @@
     "hubot-scripts": "^2.17.2",
     "hubot-slack": "^4.6.0",
     "pm2": "^3.3.1"
-  },
-  "devDependencies": {
-    "hubot-diagnostics": "^1.0.0"
   },
   "engines": {
     "node": "0.10.x"
